[package]
name = "rtal"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tungstenite = { version = "0.17", features = ["rustls-tls-webpki-roots"] }
tokio-tungstenite = { version = "0.17", features = ["connect", "rustls-tls-webpki-roots"] }
clap = { version = "3", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
regex = "1.10.4"
serde_regex = "1.1.0"
serde_yaml = "0.9.34"
futures-util = "0.3"
sha2 = "0.10.8"
urlencoding = "2.1.3"
dirs = "5.0.1"
rprompt = "2.1.1"
base64 = "0.22.0"
